--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -8,6 +8,7 @@
   <script src="vendors/angular-route.min.js" charset="utf-8"></script>
   <script src="scripts/client.js" charset="utf-8"></script>
   <script src="scripts/controllers/hero-list.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="vendors/bootstrap.min.css">
 </head>
 
 <body ng-app="HeroApp">
